Heavy work in progress for MoreStorage. Currently contains a few working blocks that I haven't been able to find anything wrong with except the locksmith workbench. This also includes a lot of commented out Forge Animation code only for the Warehouse Crate. It was working just there were too many particulars it required for my case so right now it is not worth using for MoreStorage. Most of this still needs to be tested especially the Locksmith Workbench which will most likely be getting redone since the old implementation is slightly wonky.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -780,6 +780,11 @@ grimpack.industry.fan.SUCK=Suck
 grimpack.industry.combo=Combo: 
 
 container.warehouse_crate=Warehouse Crate
+container.glass_cabinet=Glass Cabinet
+container.wood_cabinet=Wood Cabinet
+container.obsidian_safe=Obsidian Safe
+container.gold_safe=Gold Safe
+container.lockerLocker
 container.grave=Grave
 container.crafting_iron=Iron Crafting (2x)
 container.crafting_diamond=Diamond Crafting (4x)
