Finish updating MoreStorage. Impement breaking textures and document.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -781,6 +781,8 @@ grimpack.industry.fan.BLOW=Blow
 grimpack.industry.fan.SUCK=Suck
 grimpack.industry.combo=Combo: 
 
+container.item_tower=Item Tower
+container.item_tower.row= - Row %s of 
 container.locksmith_workbench=Locksmith WorkBench
 container.locksmith_workbench.combo=Type Combo
 container.warehouse_crate=Warehouse Crate
@@ -788,7 +790,7 @@ container.glass_cabinet=Glass Cabinet
 container.wood_cabinet=Wood Cabinet
 container.obsidian_safe=Obsidian Safe
 container.gold_safe=Gold Safe
-container.lockerLocker
+container.locker=Locker
 container.grave=Grave
 container.crafting_iron=Iron Crafting (2x)
 container.crafting_diamond=Diamond Crafting (4x)
@@ -1291,6 +1293,8 @@ grimpack.manual.industry.subsection.machines.page.mfurnace=The Modern Furnace is
 grimpack.manual.industry.subsection.machines.page.mfurnace.title=Modern Furnace
 grimpack.manual.industry.subsection.machines.page.mfurnace_recipes=The Modern Furnace can smelt anything that the vanilla furnace can as well as blocks and items that you can only get using the Modern Furnace, these are shown below.
 grimpack.manual.industry.subsection.machines.page.mfurnace_recipes.title=Modern Furnace Recipes
+grimpack.manual.industry.subsection.machines.page.drill=Drills provide a quick way to mine down to layer 5. These can be placed and then right clicked and it will start mining. You may also place an inventory on the top to collect drops.
+grimpack.manual.industry.subsection.machines.page.drill.title=Drill
 grimpack.manual.industry.subsection.moderntech=Modern Tech
 grimpack.manual.industry.subsection.moderntech.page.doors=Their are 3 doors added with Modern Tech (Chain, Glass, and Steel). All doors are like regular doors and can be opened with your hand.
 grimpack.manual.industry.subsection.moderntech.page.doors.title=Doors
@@ -1300,6 +1304,24 @@ grimpack.manual.industry.subsection.moderntech.page.decoration=Some random decor
 grimpack.manual.industry.subsection.moderntech.page.decoration.title=Decoration Blocks
 grimpack.manual.industry.subsection.moderntech.page.paint=Their are four types of paint rollers, white, red, green, and blue. They are used to paint the Horizontal and Vertical Siding blocks. Just right click the blocks to paint them. All of the paint rollers can go back to the original Paint Roller by putting it in a crafting table with a Bucket of Water.
 grimpack.manual.industry.subsection.moderntech.page.paint.title=Paint
+grimpack.manual.industry.subsection.moderntech.page.conveyor_belt=Conveyor Belts allow you to transport items and entities along a certain path. Items will make sure to stay in the middle of the block so they don't fall off.
+grimpack.manual.industry.subsection.moderntech.page.conveyor_belt.title=Conveyor Belts
+grimpack.manual.industry.subsection.storage=Storage
+grimpack.manual.industry.subsection.storage.page.warehouse_crate=Crates allow you to store a single chests worth of items but can also be locked to keep your items safe.
+grimpack.manual.industry.subsection.storage.page.warehouse_crate.title=Crates
+grimpack.manual.industry.subsection.storage.page.cabinets=Cabinets are similar to the warehouse crates where they store a single chests worth of items and can be locked but they come in two varieties and open from the front instead of the top.
+grimpack.manual.industry.subsection.storage.page.cabinets.title=Cabinets
+grimpack.manual.industry.subsection.storage.page.safes=The obsidian safe is very strong and resistant and is similar to crates and cabinets. The gold safe can only hold 9 different stacks but can be broken and placed down while storing the items inside. 
+grimpack.manual.industry.subsection.storage.page.safes.title=Safes
+grimpack.manual.industry.subsection.storage.page.locker=Lockers can be placed either one or two high. When placed two high you can access twice the items. Similar to a double chest but on it's side.
+grimpack.manual.industry.subsection.storage.page.locker.title=Lockers
+grimpack.manual.industry.subsection.storage.page.item_tower=Item Towers are an interesting way of storing your items. Each one can store 18 stacks in two rows. But when stacked on top of each other you can access all of them from the one you open.
+grimpack.manual.industry.subsection.storage.page.item_tower.title=Item Towers
+grimpack.manual.industry.subsection.storage.page.combination=Locks and keys can be made that when right clicked on any storage option except item towers then they will be locked unless you have the key with the correct combo. You will need a locksmith workbench to set the lock.
+grimpack.manual.industry.subsection.storage.page.combination.title=Lock and Key
+grimpack.manual.industry.subsection.storage.page.locksmith_workbench=A locksmith workbench can be used to set the lock for locks and keys. Put a lock or key in the right, type a lock in the middle and the output will contain your newly set lock or key.
+grimpack.manual.industry.subsection.storage.page.locksmith_workbench.title=Locksmith Workbench
+
 grimpack.manual.tools.modinfo=Adds a bunch of weapons and useful tools.
 grimpack.manual.tools.subsection.masks=Masks
 grimpack.manual.tools.subsection.masks.page.empty=To get started creating mob masks you will need an empty mask. The empty mask can be worn.
