Add in support for disabling subparts of cuisine. This is how I'm thinking would work the best for the other parts. Also, fix some config generation issues.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -604,7 +604,15 @@ Enable world part.tooltip=True to load Minecraft with the world part of the Grim
 grimpack.cuisine.cfg.tooltip=Config options for the food part of the Grim Pack
 grimpack.cuisine.cfg.general=General Options
 grimpack.cuisine.cfg.general.tooltip=Contains general options for customizing cuisine
+grimpack.cuisine.cfg.subparts=Sub Parts
+grimpack.cuisine.cfg.subparts.tooltip=Here you can modify what subparts of cuisine are loaded
 Generate Cocoa Trees.tooltip=Should cocoa trees be generated
+Enable SubPart chocolate.tooltip=True to load Minecraft with the chocolate subpart of the Cuisine
+Enable SubPart dairy.tooltip=True to load Minecraft with the dairy subpart of the Cuisine
+Enable SubPart dragon fruit.tooltip=True to load Minecraft with the dragon fruit subpart of the Cuisine
+Enable SubPart health.tooltip=True to load Minecraft with the health subpart of the Cuisine
+Enable SubPart pie.tooltip=True to load Minecraft with the pie subpart of the Cuisine
+Enable SubPart soda.tooltip=True to load Minecraft with the soda subpart of the Cuisine
 
 grimpack.decor.cfg.general=General Options
 grimpack.decor.cfg.grillrecipes=Custom Grill Recipes
@@ -990,10 +998,6 @@ grimpack.manual.cuisine.subsection.dairy.page.cheese.title=Cheese Maker Recipe
 grimpack.manual.cuisine.subsection.dairy.page.cheeseblock=The block of cheese that you got from using the cheese maker can then be changed into 9 cheese pieces or vice versa.
 grimpack.manual.cuisine.subsection.dairy.page.cheeseblock.title=Cheesey
 grimpack.manual.cuisine.subsection.food=Food
-grimpack.manual.cuisine.subsection.food.page.utensils.title=Utensils
-grimpack.manual.cuisine.subsection.food.page.utensils=Using these utensils you will be able to create some more filling and appetizing foods.
-grimpack.manual.cuisine.subsection.food.page.extras.title=Dough and Pumpkin
-grimpack.manual.cuisine.subsection.food.page.extras=These items will be used later but, if you can't control your hunger, then they can still make a nice snack.
 grimpack.manual.cuisine.subsection.food.page.sandwiches.title=Sandwiches
 grimpack.manual.cuisine.subsection.food.page.sandwiches=Using cheese you will be able to craft some yummy sandwiches. You can create bread slices used to create a filling cheese burger or a cheese sandwich.
 grimpack.manual.cuisine.subsection.food.page.eggs=Using butter you will also be able to create some eggs which heal quite a bit back and are very filling. You will first have to crack and mix your eggs.
@@ -1001,6 +1005,8 @@ grimpack.manual.cuisine.subsection.food.page.eggs.title=Making Eggs
 grimpack.manual.cuisine.subsection.food.page.cooked=Once mixed you can heat up your eggs and get them ready to eat. You don't want to be eating raw eggs.
 grimpack.manual.cuisine.subsection.food.page.cooked.title=Cooking Eggs
 grimpack.manual.cuisine.subsection.pie=Pies
+grimpack.manual.cuisine.subsection.pie.page.extras.title=Pie Ingredients
+grimpack.manual.cuisine.subsection.pie.page.extras=There are a few things you can and must make when baking pies. You will need dough and, as an optional filling, pumpkin slices.
 grimpack.manual.cuisine.subsection.pie.page.craft.title=Preparation
 grimpack.manual.cuisine.subsection.pie.page.craft=Before you can eat any pie you must make the empty pie and fill it with your choice of filling.
 grimpack.manual.cuisine.subsection.pie.page.bake.title=Baking
