Part 2 of config update. Decor now supports configurable subparts. #96

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -618,6 +618,8 @@ grimpack.decor.cfg.general=General Options
 grimpack.decor.cfg.grillrecipes=Custom Grill Recipes
 grimpack.decor.cfg.tooltip=Config options for the decorative part of the Grim Pack
 grimpack.decor.cfg.general.tooltip=Contains many options to customize Grim Decor
+grimpack.decor.cfg.subparts=Sub Parts
+grimpack.decor.cfg.subparts.tooltip=Here you can modify what subparts of decor are loaded
 DyeFrames.tooltip=True if you can dye frames
 BurnFrames.tooltip=True if frames can catch on fire and burn
 DyeWallpaper.tooltip=True if wallpaper can be dyed
@@ -638,6 +640,20 @@ grimpack.decor.cfg.EnableFirepitNet.tooltip=True if you want the firepit to have
 grimpack.decor.cfg.IsFireParticles.tooltip=When False the fire when blocks are active are actual fire if true this uses particles instead.
 Flip Blocks in Flat Item Frames.tooltip=If true then when a Flat Item Frame is placed on the ceiling or floor blocks will render with the top up.
 Colorizers Consume Block.tooltip=Should colorizer blocks consume the block when they take on the blocks look.
+Enable SubPart cages.tooltip=True to load Minecraft with the cages subpart of the Decor
+Enable SubPart calendar.tooltip=True to load Minecraft with the calendar subpart of the Decor
+Enable SubPart colorizer.tooltip=True to load Minecraft with the colorizer subpart of the Decor
+Enable SubPart decorations.tooltip=True to load Minecraft with the decorations subpart of the Decor
+Enable SubPart fireplaces.tooltip=True to load Minecraft with the cages fireplaces of the Decor. Only works if colorizer is enabled.
+Enable SubPart flat item frame.tooltip=True to load Minecraft with the flat item frame subpart of the Decor
+Enable SubPart frames.tooltip=True to load Minecraft with the frames subpart of the Decor
+Enable SubPart furniture.tooltip=True to load Minecraft with the furniture subpart of the Decor. Only works if colorizer is enabled.
+Enable SubPart lamp posts.tooltip=True to load Minecraft with the lamp posts subpart of the Decor. Only works if colorizer is enabled.
+Enable SubPart lanterns.tooltip=True to load Minecraft with the lanterns subpart of the Decor
+Enable SubPart lightbulbs.tooltip=True to load Minecraft with the lightbulbs subpart of the Decor
+Enable SubPart slopes.tooltip=True to load Minecraft with the slopes subpart of the Decor. Only works if colorizer is enabled.
+Enable SubPart wall clock.tooltip=True to load Minecraft with the wall clock subpart of the Decor
+Enable SubPart wallpaper.tooltip=True to load Minecraft with the wallpaper subpart of the Decor
 
 grimpack.industry.cfg.tooltip=Config options for the mechanical part of the Grim Pack
 grimpack.industry.cfg.general=General Options
